roles/openshift-apps/modernpaste/files/deploymentconfig.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: "modernpaste-web"
  labels:
    environment: "modernpaste"
    service: web
spec:
  replicas: 1
  selector:
    environment: "modernpaste"
    service: web
  template:
    metadata:
      labels:
        environment: "modernpaste"
        service: web
    spec:
      containers:
      - name: web
        image: 172.30.53.136:5000/modernpaste/inframodernpaste:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-volume
          mountPath: /etc/modern-paste
          readOnly: true
        - name: secret-volume
          mountPath: /etc/secret
          readOnly: true
        readinessProbe:
          timeoutSeconds: 1
