roles/openshift-apps/modernpaste/files/service.yml
- apiVersion: v1
  kind: Service
  metadata:
    name: "modernpaste-web"
    labels:
      environment: "modernpaste"
  spec:
    selector:
      environment: "modernpaste"
      service: web
    ports:
    - name: web
      port: 8080
      targetPort: 8080
