roles/openshift-apps/modernpaste/files/route.yml
- apiVersion: v1
  kind: Route
  metadata:
    name: "modernpaste-web"
    labels:
      environment: "modernpaste"
  spec:
    port:
      targetPort: web
    to:
      kind: Service
      name: "modernpaste-web"
    tls:
      termination: edge
      insecureEdgeTerminationPolicy: Redirect
